--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="slick.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="reset.css" type="text/css">
     <link rel="stylesheet" href="slick.css" type="text/css">
     <link rel="stylesheet" href="style.css" type="text/css">
